Add layout of header

--- a/client/src/assets/styles/App.css
+++ b/client/src/assets/styles/App.css
@@ -1,13 +1,5 @@
+@import "Header.css";
+
 .App {
   text-align: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 80px;
-  display: flex;
-  align-items: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
