--- a/client/src/assets/styles/Header.sass
+++ b/client/src/assets/styles/Header.sass
@@ -1,12 +1,11 @@
 .App-header
-    background-color: $darkest-blue
+    background-color: $darkest-grey
     padding: 16px
     display: flex
     align-items: center
     justify-content: space-between
     font-size: 1.5rem
     color: white
-    margin-bottom: 36px
 
 .header-left
     display: flex
