Start adding registration page

--- a/client/src/assets/styles/App.sass
+++ b/client/src/assets/styles/App.sass
@@ -6,6 +6,7 @@ $light-blue: #cfe8fc
 @import "Link.sass"
 @import "MainPage.sass"
 @import "AppFooter.sass"
+@import "Registration.sass"
 
 .App
   text-align: center
