Add username field and add margins

--- a/client/src/assets/styles/Registration.sass
+++ b/client/src/assets/styles/Registration.sass
@@ -7,4 +7,7 @@
 
 .registration-input
   width: 100%
-  margin-bottom: 16px
+  margin-bottom: 16px !important
+
+.registration-header
+  margin-bottom: 16px !important
