Add some styles for tabs

--- a/client/src/assets/styles/App.sass
+++ b/client/src/assets/styles/App.sass
@@ -1,12 +1,16 @@
 $blue-color: #2196f3
+$secondary-color: #f44336
 $darkest-grey: #282c34
 $light-blue: #cfe8fc
+$white-color: #ffffff
 
 @import "Header.sass"
 @import "Link.sass"
 @import "MainPage.sass"
 @import "AppFooter.sass"
 @import "Registration.sass"
+@import "Box.sass"
+@import "Operations.sass"
 
 .App
   text-align: center
