Implement material ui tabs with routes and change secondary colors

--- a/client/src/assets/styles/Operations.sass
+++ b/client/src/assets/styles/Operations.sass
@@ -1,5 +1,6 @@
-.tab
-  color: $white-color
-
-.tab-active
-  border-bottom: 2px solid $secondary-color
+//.tab
+//  color: $white-color
+//  text-decoration: none
+//
+//.tab-active
+//  //border-bottom: 2px solid $secondary-color
