Add spacings and start making portfolio

--- a/client/src/assets/styles/App.sass
+++ b/client/src/assets/styles/App.sass
@@ -11,6 +11,8 @@ $white-color: #ffffff
 @import "Registration.sass"
 @import "Box.sass"
 @import "Operations.sass"
+@import "space-bottom.sass"
+@import "space-top.sass"
 
 .App
   text-align: center
