--- a/client/src/assets/styles/Box.sass
+++ b/client/src/assets/styles/Box.sass
@@ -2,3 +2,6 @@
   background-color: $white-color
   box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2), 0 4px 5px 0px rgba(0,0,0,0.14), 0 1px 10px 0px rgba(0,0,0,0.12)
   padding: 32px
+
+.box-small-spacing
+  padding: 16px
