Add portfolio and profit blocks to operations

--- a/client/src/assets/styles/App.sass
+++ b/client/src/assets/styles/App.sass
@@ -3,6 +3,7 @@ $secondary-color: #f50057
 $darkest-grey: #282c34
 $light-blue: #cfe8fc
 $white-color: #ffffff
+$black-color: #000000
 
 @import "Header.sass"
 @import "Link.sass"
@@ -11,8 +12,10 @@ $white-color: #ffffff
 @import "Registration.sass"
 @import "Box.sass"
 @import "Operations.sass"
-@import "space-bottom.sass"
-@import "space-top.sass"
+@import "Divider.sass"
+@import "helpers/space-bottom"
+@import "helpers/space-top"
+@import "helpers/text-left"
 
 .App
   text-align: center
