Improve view of operations on all screens

--- a/client/src/assets/styles/App.sass
+++ b/client/src/assets/styles/App.sass
@@ -16,6 +16,7 @@ $black-color: #000000
 @import "helpers/space-bottom"
 @import "helpers/space-top"
 @import "helpers/text-left"
+@import "helpers/inline"
 
 .App
   text-align: center
