--- a/client/src/assets/styles/Operations.sass
+++ b/client/src/assets/styles/Operations.sass
@@ -1,6 +1,5 @@
-//.tab
-//  color: $white-color
-//  text-decoration: none
-//
-//.tab-active
-//  //border-bottom: 2px solid $secondary-color
+.portfolio-quantity
+  display: flex
+  justify-content: space-between
+  align-items: center
+  padding: 0 24px
