--- a/client/src/assets/styles/Operations.sass
+++ b/client/src/assets/styles/Operations.sass
@@ -3,3 +3,7 @@
   justify-content: space-between
   align-items: center
   padding: 0 24px
+
+.operations-table-wrapper
+  max-height: 375px
+  overflow: auto
