Add auth user block to header

--- a/client/src/assets/styles/App.sass
+++ b/client/src/assets/styles/App.sass
@@ -17,6 +17,7 @@ $black-color: #000000
 @import "helpers/space-top"
 @import "helpers/text-left"
 @import "helpers/inline"
+@import "helpers/space-left"
 
 .App
   text-align: center
