--- a/client/src/assets/styles/Header.sass
+++ b/client/src/assets/styles/Header.sass
@@ -6,6 +6,8 @@
     justify-content: space-between
     font-size: 1.5rem
     color: white
+    min-height: 70px
+    box-sizing: border-box
 
 .header-left
     display: flex
