Add modal for choosing amount of items

--- a/client/src/assets/styles/App.sass
+++ b/client/src/assets/styles/App.sass
@@ -13,6 +13,7 @@ $black-color: #000000
 @import "Box.sass"
 @import "Operations.sass"
 @import "Divider.sass"
+@import "Modal.sass"
 @import "helpers/space-bottom"
 @import "helpers/space-top"
 @import "helpers/text-left"
