Improve css structure

--- a/client/src/assets/styles/App.sass
+++ b/client/src/assets/styles/App.sass
@@ -5,15 +5,14 @@ $light-blue: #cfe8fc
 $white-color: #ffffff
 $black-color: #000000
 
-@import "Header.sass"
-@import "Link.sass"
-@import "MainPage.sass"
-@import "AppFooter.sass"
-@import "Registration.sass"
-@import "Box.sass"
-@import "Operations.sass"
-@import "Divider.sass"
-@import "Modal.sass"
+@import "app-header/app-header"
+@import "link/link"
+@import "app-footer/app-footer"
+@import "pages/registration/registration"
+@import "box/box"
+@import "pages/operations/operations"
+@import "divider/divider"
+@import "modal/modal"
 @import "helpers/space-bottom"
 @import "helpers/space-top"
 @import "helpers/text-left"
